git-svn-id: file:///var/svn/claro-catalog@189 0db79848-0afd-4259-9b79-6da5ec97fbb6

--- a/CatalogXS/trunk/CatalogXS/source/agilexs/cms/shop/tetterode/website/website.config
+++ b/CatalogXS/trunk/CatalogXS/source/agilexs/cms/shop/tetterode/website/website.config
@@ -1,4 +1,4 @@
 website.name=Tetterode Web Shop
 website.path=/tetterode
-website.parents=classpath:claro.cms.shop.site
+website.parents=classpath:claro.cms.webshop.website
 website.components=claro.cms.webshop.WebshopComponent
