git-svn-id: file:///var/svn/claro-catalog@200 0db79848-0afd-4259-9b79-6da5ec97fbb6

--- a/CatalogXS/trunk/CatalogXS/source/claro/cms/showcase/website.config
+++ b/CatalogXS/trunk/CatalogXS/source/claro/cms/showcase/website.config
@@ -1,2 +1,2 @@
 website.path=/showcase
-website.components=claro.cms.showcase.WorldComponent
+website.components=claro.cms.showcase.WorldComponent,claro.cms.showcase.ShowcaseComponent
