git-svn-id: file:///var/svn/claro-catalog@252 0db79848-0afd-4259-9b79-6da5ec97fbb6

--- a/CatalogXS/trunk/TetterodeWebshop/src/main/resources/claro/tetterode/webshop/website/website.config
+++ b/CatalogXS/trunk/TetterodeWebshop/src/main/resources/claro/tetterode/webshop/website/website.config
@@ -3,6 +3,7 @@ website.server=tetterode.catalogxs.com
 website.path=
 website.parents=classpath:claro.cms.webshop.website
 website.components=claro.cms.webshop.WebshopComponent
+website.locales=en,de,sp
 
 mail.smtp.from=mailer@catalogxs.com
 mail.smtp.host=smtp.gmail.com
