--- a/CatalogXS/trunk/ClaroPersistence/pom.xml
+++ b/CatalogXS/trunk/ClaroPersistence/pom.xml
@@ -12,7 +12,24 @@
 		<lift.version>2.0-scala280-SNAPSHOT</lift.version>
 	</properties>
 
+	<repositories>
+	  <repository>
+	     <id>EclipseLink Repo</id>
+	     <url>http://www.eclipse.org/downloads/download.php?r=1&amp;nf=1&amp;file=/rt/eclipselink/maven.repo</url>
+	  </repository>    
+	</repositories>
+	 
 	<dependencies>
+		<dependency>
+	    <groupId>org.eclipse.persistence</groupId>
+	    <artifactId>eclipselink</artifactId>
+	    <version>2.0.2</version>
+	  </dependency>
+		<dependency>
+		    <groupId>postgresql</groupId>
+		    <artifactId>postgresql</artifactId>
+		    <version>8.4-701.jdbc4</version>
+		</dependency>
 	</dependencies>
 
 	<build>
@@ -42,7 +59,32 @@
 					<target>1.5</target>
 				</configuration>
 			</plugin>
-		</plugins>
+  		<plugin>
+        <artifactId>maven-resources-plugin</artifactId>
+        <version>2.4.3</version>
+        <executions>
+          <execution>
+            <id>copy-resources</id>
+            <phase>validate</phase>
+            <goals>
+              <goal>copy-resources</goal>
+            </goals>
+            <configuration>
+              <outputDirectory>${basedir}/target/classes</outputDirectory>
+              <resources>          
+                <resource>
+                  <directory>generated/</directory>
+                  <includes>
+                    <include>**/*.xml</include>
+                  </includes>
+                  <filtering>true</filtering>
+                </resource>
+              </resources>              
+            </configuration>            
+          </execution>
+        </executions>
+      </plugin>
+ 		</plugins>
 	</build>
 	<reporting>
 		<plugins>
