git-svn-id: file:///var/svn/claro-catalog@259 0db79848-0afd-4259-9b79-6da5ec97fbb6

--- a/CatalogXS/trunk/TetterodeWebshop/src/main/resources/claro/tetterode/webshop/website/website.config
+++ b/CatalogXS/trunk/TetterodeWebshop/src/main/resources/claro/tetterode/webshop/website/website.config
@@ -10,3 +10,5 @@ mail.smtp.host=smtp.gmail.com
 mail.smtp.user=ruud.diterwich@gmail.com
 mail.smtp.password=dttwts18
 
+entitymanager.eclipselink.cache.shared.default=false
+
