git-svn-id: file:///var/svn/claro-catalog@270 0db79848-0afd-4259-9b79-6da5ec97fbb6

--- a/CatalogXS/trunk/ClaroPersistence/pom.xml
+++ b/CatalogXS/trunk/ClaroPersistence/pom.xml
@@ -57,6 +57,7 @@
 				<configuration>
 					<source>1.5</source>
 					<target>1.5</target>
+				<excludes><exclude>claro/persistence/I*Template.java</exclude></excludes>
 				</configuration>
 			</plugin>
   		<plugin>
