--- a/CatalogXS/trunk/TetterodeWebshop/src/main/resources/claro/tetterode/webshop/website/website.config
+++ b/CatalogXS/trunk/TetterodeWebshop/src/main/resources/claro/tetterode/webshop/website/website.config
@@ -5,10 +5,10 @@ website.parents=classpath:claro.cms.webshop.website
 website.components=claro.cms.webshop.WebshopComponent
 website.locales=en,de,es
 
-mail.smtp.from=mailer@catalogxs.com
+ail.smtp.from=catalogxs@gmail.com
 mail.smtp.host=smtp.gmail.com
-mail.smtp.user=ruud.diterwich@gmail.com
-mail.smtp.password=dttwts18
+mail.smtp.user=catalogxs@gmail.com
+mail.smtp.password=tpacoh18
 
 entitymanager.eclipselink.cache.shared.default=false
 
