--- a/CatalogXS/trunk/ClaroCMS/pom.xml
+++ b/CatalogXS/trunk/ClaroCMS/pom.xml
@@ -7,8 +7,8 @@
   <name>ClaroCMS</name>
   <inceptionYear>2010</inceptionYear>
   <properties>
-    <scala.version>2.8.0.RC7</scala.version>
-    <lift.version>2.0-scala280-SNAPSHOT</lift.version>
+    <scala.version>2.8.0</scala.version>
+    <lift.version>2.0</lift.version>
   </properties>
 
   <repositories>
