--- a/CatalogXS/trunk/DemoWebshop/src/main/resources/claro/demowebshop/website/website.config
+++ b/CatalogXS/trunk/DemoWebshop/src/main/resources/claro/demowebshop/website/website.config
@@ -1,8 +1,8 @@
 website.name=Demo Web Shop
 website.server=demo.catalogxs.com
 website.path=/shop
-website.parents=classpath:claro.cms.webshop.website,classpath:claro.cms.documentation
-website.components=claro.cms.webshop.WebshopComponent
+website.parents=classpath:claro.cms.webshop.website,classpath:claro.cms.catalog.website,classpath:claro.cms.documentation
+website.components=claro.cms.webshop.WebshopComponent,claro.cms.catalog.CatalogComponent
 website.locales=en,de,es
 
 mail.smtp.from=catalogxs@gmail.com
