--- a/CatalogXS/trunk/ClaroCMS/.classpath
+++ b/CatalogXS/trunk/ClaroCMS/.classpath
@@ -10,7 +10,7 @@
 	<classpathentry kind="lib" path="lib/servlet-api-2.5.jar" sourcepath="C:/Users/ruud/.m2/repository/javax/servlet/servlet-api/2.5/servlet-api-2.5-sources.jar"/>
 	<classpathentry kind="lib" path="lib/persistence-api-1.0.jar" sourcepath="C:/Users/ruud/.m2/repository/javax/persistence/persistence-api/1.0/persistence-api-1.0-sources.jar"/>
 	<classpathentry kind="lib" path="lib/mail-1.4.1.jar" sourcepath="C:/Users/ruud/.m2/repository/javax/mail/mail/1.4.1/mail-1.4.1-sources.jar"/>
-	<classpathentry kind="lib" path="lib/google-collections-1.0.jar"/>
+	<classpathentry kind="lib" path="lib/google-collections-1.0.jar" sourcepath="C:/Users/ruud/.m2/repository/com/google/collections/google-collections/1.0/google-collections-1.0-sources.jar"/>
 	<classpathentry kind="lib" path="lib/lift-json-2.0-scala280-SNAPSHOT.jar"/>
 	<classpathentry kind="lib" path="lib/lift-actor-2.0-scala280-SNAPSHOT.jar"/>
 	<classpathentry kind="lib" path="lib/lift-mapper-2.0-scala280-SNAPSHOT.jar"/>
