--- a/CatalogXS/trunk/DemoWebshop/.classpath
+++ b/CatalogXS/trunk/DemoWebshop/.classpath
@@ -3,7 +3,8 @@
 	<classpathentry kind="src" path="src/main/scala"/>
 	<classpathentry kind="src" path="src/main/webapp"/>
 	<classpathentry kind="src" path="src/main/resources"/>
-	<classpathentry combineaccessrules="false" kind="src" path="/ClaroCMS"/>
+	<classpathentry combineaccessrules="false" exported="true" kind="src" path="/ClaroCMS"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER"/>
+	<classpathentry combineaccessrules="false" exported="true" kind="src" path="/Jetty"/>
 	<classpathentry kind="output" path="target/classes-eclipse"/>
 </classpath>
