--- a/CatalogXS/trunk/ClaroCMS/pom.xml
+++ b/CatalogXS/trunk/ClaroCMS/pom.xml
@@ -7,8 +7,8 @@
   <name>ClaroCMS</name>
   <inceptionYear>2010</inceptionYear>
   <properties>
-    <scala.version>2.8.0</scala.version>
-    <lift.version>2.0</lift.version>
+  	<scala.version>2.8.1.RC1</scala.version>
+  	<lift.version>2.1</lift.version>
   </properties>
 
   <repositories>
@@ -40,17 +40,12 @@
     </dependency>
     <dependency>
       <groupId>net.liftweb</groupId>
-      <artifactId>lift-util</artifactId>
+      <artifactId>lift-util_2.8.0</artifactId>
       <version>${lift.version}</version>
     </dependency>
     <dependency>
       <groupId>net.liftweb</groupId>
-      <artifactId>lift-webkit</artifactId>
-      <version>${lift.version}</version>
-    </dependency>
-    <dependency>
-      <groupId>net.liftweb</groupId>
-      <artifactId>lift-mapper</artifactId>
+      <artifactId>lift-webkit_2.8.0</artifactId>
       <version>${lift.version}</version>
     </dependency>
     <dependency>
