git-svn-id: file:///var/svn/claro-catalog@315 0db79848-0afd-4259-9b79-6da5ec97fbb6

--- a/CatalogXS/trunk/DemoWebshop/src/main/resources/claro/demowebshop/website/website.config
+++ b/CatalogXS/trunk/DemoWebshop/src/main/resources/claro/demowebshop/website/website.config
@@ -5,6 +5,7 @@ website.parents=classpath:claro.cms.webshop.website,classpath:claro.cms.catalog.
 website.components=claro.cms.webshop.WebshopComponent,claro.cms.catalog.CatalogComponent,claro.cms.documentation.showcase.WorldComponent,claro.cms.documentation.showcase.ShowcaseComponent
 website.locales=en,de,es
 
+mail.smtp.port=587
 mail.smtp.from=catalogxs@gmail.com
 mail.smtp.host=smtp.gmail.com
 mail.smtp.user=catalogxs@gmail.com
