--- a/CatalogXS/trunk/TetterodeWebshop/.classpath
+++ b/CatalogXS/trunk/TetterodeWebshop/.classpath
@@ -6,5 +6,6 @@
 	<classpathentry kind="con" path="ch.epfl.lamp.sdt.launching.SCALA_CONTAINER"/>
 	<classpathentry combineaccessrules="false" kind="src" path="/ClaroCMS"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER"/>
+	<classpathentry combineaccessrules="false" kind="src" path="/Jetty"/>
 	<classpathentry kind="output" path="target/classes-eclipse"/>
 </classpath>
