git-svn-id: file:///var/svn/claro-catalog@322 0db79848-0afd-4259-9b79-6da5ec97fbb6

--- a/CatalogXS/trunk/TetterodeWebshop/src/main/resources/claro/tetterode/webshop/website/website.config
+++ b/CatalogXS/trunk/TetterodeWebshop/src/main/resources/claro/tetterode/webshop/website/website.config
@@ -1,10 +1,16 @@
 website.name=Tetterode Web Shop
 website.server=tetterode.catalogxs.com
-website.path=
-website.components=claro.cms.webshop.WebshopComponent
 website.locales=en,de,es
 
-ail.smtp.from=catalogxs@gmail.com
+website.components=claro.cms.webshop.WebshopComponent,claro.cms.catalog.CatalogComponent
+
+entitymanager.eclipselink.jdbc.driver = org.postgresql.Driver
+entitymanager.eclipselink.jdbc.url = jdbc:postgresql:postgres
+entitymanager.eclipselink.jdbc.user = postgres
+entitymanager.eclipselink.jdbc.password = postgres
+
+mail.smtp.port=587
+mail.smtp.from=catalogxs@gmail.com
 mail.smtp.host=smtp.gmail.com
 mail.smtp.user=catalogxs@gmail.com
 mail.smtp.password=tpacoh18
