--- a/CatalogXS/trunk/DemoWebshop/src/main/resources/claro/demowebshop/website/website.config
+++ b/CatalogXS/trunk/DemoWebshop/src/main/resources/claro/demowebshop/website/website.config
@@ -1,9 +1,13 @@
 website.name=Demo Web Shop
 website.server=demo.catalogxs.com
-website.path=/shop
-website.parents=classpath:claro.cms.webshop.website,classpath:claro.cms.catalog.website,classpath:claro.cms.documentation
-website.components=claro.cms.webshop.WebshopComponent,claro.cms.catalog.CatalogComponent,claro.cms.documentation.showcase.WorldComponent,claro.cms.documentation.showcase.ShowcaseComponent
 website.locales=en,de,es
+
+website.components=claro.cms.webshop.WebshopComponent,claro.cms.catalog.CatalogComponent
+
+entitymanager.eclipselink.jdbc.driver = org.postgresql.Driver
+entitymanager.eclipselink.jdbc.url = jdbc:postgresql:postgres
+entitymanager.eclipselink.jdbc.user = postgres
+entitymanager.eclipselink.jdbc.password = postgres
 
 mail.smtp.port=587
 mail.smtp.from=catalogxs@gmail.com
@@ -13,4 +17,4 @@ mail.smtp.password=tpacoh18
 
 entitymanager.eclipselink.cache.shared.default=false
 #entitymanager.eclipselink.ddl-generation=drop-and-create-tables
-entitymanager.eclipselink.ddl-generation.output-mode=database
+#entitymanager.eclipselink.ddl-generation.output-mode=database
