--- a/easyenterprise/ee-server/trunk/pom.xml
+++ b/easyenterprise/ee-server/trunk/pom.xml
@@ -30,7 +30,6 @@
 			<version>${gwt.version}</version>
 			<type>jar</type>
 			<scope>runtime</scope>
-			<optional>false</optional>
 		</dependency>
 		<dependency>
 			<groupId>javax.servlet</groupId>
@@ -56,9 +55,9 @@
 		<resources>
 			<resource>
 				<directory>src/main/java</directory>
-				<includes>
-					<include>easyenterprise/server/account/**</include>
-				</includes>
+        <excludes>
+          <exclude>**/impl/**</exclude>
+        </excludes>
 			</resource>
 			<resource>
 				<directory>src/main/resources</directory>
