--- a/easyenterprise/ee-lib/trunk/pom.xml
+++ b/easyenterprise/ee-lib/trunk/pom.xml
@@ -24,6 +24,11 @@
       <version>${gwt.version}</version>
       <scope>provided</scope>
     </dependency>
+    <dependency>
+      <groupId>org.eclipse.persistence</groupId>
+      <artifactId>javax.persistence</artifactId>
+      <version>2.0.2</version>
+    </dependency>
   </dependencies>
   <build>
     <resources>
