git-svn-id: file:///var/svn/claro-catalog@353 0db79848-0afd-4259-9b79-6da5ec97fbb6

--- a/easyenterprise/citykids/trunk/war/WEB-INF/web.xml
+++ b/easyenterprise/citykids/trunk/war/WEB-INF/web.xml
@@ -7,9 +7,7 @@
   
       <servlet>
         <servlet-name>EasyEnterpriseServer</servlet-name>
-        <servlet-class>
-            easyenterprise.server.gwt.EasyEnterpriseServlet
-        </servlet-class>
+        <servlet-class>citykids.server.EasyEnterpriseServlet</servlet-class>
     </servlet>
     <servlet-mapping>
         <servlet-name>EasyEnterpriseServer</servlet-name>
