git-svn-id: file:///var/svn/claro-catalog@355 0db79848-0afd-4259-9b79-6da5ec97fbb6

--- a/easyenterprise/citykids/trunk/war/WEB-INF/web.xml
+++ b/easyenterprise/citykids/trunk/war/WEB-INF/web.xml
@@ -6,8 +6,8 @@
 <web-app>
   
       <servlet>
-        <servlet-name>EasyEnterpriseServer</servlet-name>
-        <servlet-class>citykids.server.EasyEnterpriseServlet</servlet-class>
+        <servlet-name>CityKidsServer</servlet-name>
+        <servlet-class>citykids.server.CityKidsServlet</servlet-class>
     </servlet>
     <servlet-mapping>
         <servlet-name>EasyEnterpriseServer</servlet-name>
