--- a/easyenterprise/citykids/trunk/war/WEB-INF/web.xml
+++ b/easyenterprise/citykids/trunk/war/WEB-INF/web.xml
@@ -10,19 +10,19 @@
       <servlet-class>citykids.server.CityKidsServlet</servlet-class>
       <init-param>
         <param-name>javax.persistence.jdbc.driver</param-name>
-        <param-value>org.hsqldb.jdbcDriver</param-value>
+        <param-value>org.postgresql.Driver</param-value>
       </init-param>
       <init-param>
         <param-name>javax.persistence.jdbc.url</param-name>
-        <param-value>jdbc:hsqldb:mem:unit-testing-jpa</param-value>
+        <param-value>jdbc:postgresql:postgres</param-value>
       </init-param>
       <init-param>
         <param-name>javax.persistence.jdbc.user</param-name>
-        <param-value>sa</param-value>
+        <param-value>postgres</param-value>
       </init-param>
       <init-param>
         <param-name>javax.persistence.jdbc.password</param-name>
-        <param-value></param-value>
+        <param-value>Tpacoh18</param-value>
       </init-param>
     </servlet>
     <servlet-mapping>
