--- a/easyenterprise/ee-lib/trunk/pom.xml
+++ b/easyenterprise/ee-lib/trunk/pom.xml
@@ -29,6 +29,11 @@
       <artifactId>javax.persistence</artifactId>
       <version>2.0.2</version>
     </dependency>
+    <dependency>
+        <groupId>com.google.guava</groupId>
+        <artifactId>guava</artifactId>
+        <version>r07</version>
+    </dependency>
   </dependencies>
   <build>
     <resources>
