--- a/easyenterprise/citykids/trunk/war/WEB-INF/web.xml
+++ b/easyenterprise/citykids/trunk/war/WEB-INF/web.xml
@@ -14,7 +14,7 @@
       </init-param>
       <init-param>
         <param-name>javax.persistence.jdbc.url</param-name>
-        <param-value>jdbc:postgresql:postgres</param-value>
+        <param-value>jdbc:postgresql:postgres/citykids</param-value>
       </init-param>
       <init-param>
         <param-name>javax.persistence.jdbc.user</param-name>
@@ -22,7 +22,7 @@
       </init-param>
       <init-param>
         <param-name>javax.persistence.jdbc.password</param-name>
-        <param-value>Tpacoh18</param-value>
+        <param-value>postgres</param-value>
       </init-param>
     </servlet>
     <servlet-mapping>
