--- a/easyenterprise/ee-server/trunk/pom.xml
+++ b/easyenterprise/ee-server/trunk/pom.xml
@@ -17,7 +17,7 @@
     <dependency>
       <groupId>org.eclipse.persistence</groupId>
       <artifactId>eclipselink</artifactId>
-      <version>2.1.1</version>
+      <version>2.0.2</version>
     </dependency>
     <dependency>
       <groupId>org.eclipse.persistence</groupId>
@@ -41,13 +41,22 @@
       <groupId>easyenterprise</groupId>
       <artifactId>ee-lib</artifactId>
       <version>1.0-SNAPSHOT</version>
-      <type>jar</type>
       <scope>compile</scope>
     </dependency>
     <dependency>
       <groupId>postgresql</groupId>
       <artifactId>postgresql</artifactId>
       <version>8.4-702.jdbc4</version>
+    </dependency>
+		<dependency>
+			<groupId>org.hsqldb</groupId>
+			<artifactId>hsqldb</artifactId>
+			<version>2.0.0</version>
+		</dependency>
+    <dependency>
+      <groupId>junit</groupId>
+      <artifactId>junit</artifactId>
+      <version>4.8</version>
     </dependency>
   </dependencies>
   <repositories>
