--- a/easyenterprise/citykids/trunk/.classpath
+++ b/easyenterprise/citykids/trunk/.classpath
@@ -6,5 +6,6 @@
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER"/>
 	<classpathentry combineaccessrules="false" exported="true" kind="src" path="/ee-lib"/>
 	<classpathentry combineaccessrules="false" exported="true" kind="src" path="/ee-server"/>
+	<classpathentry kind="lib" path="lib/gwt-incubator-20100204-r1747.jar"/>
 	<classpathentry kind="output" path="war/WEB-INF/classes"/>
 </classpath>
