--- a/CatalogXS/trunk/ClaroCMS/pom.xml
+++ b/CatalogXS/trunk/ClaroCMS/pom.xml
@@ -38,6 +38,11 @@
       <artifactId>scala-library</artifactId>
       <version>${scala.version}</version>
     </dependency>
+     <dependency>
+      <groupId>org.scalatest</groupId>
+      <artifactId>scalatest</artifactId>
+      <version>1.2</version>
+    </dependency>
     <dependency>
       <groupId>net.liftweb</groupId>
       <artifactId>lift-util_2.8.0</artifactId>
