--- a/trunk/DemoWebshop/pom.xml
+++ b/trunk/DemoWebshop/pom.xml
@@ -37,9 +37,16 @@
     <testSourceDirectory>src/test/scala</testSourceDirectory>
     <plugins>
       <plugin>
+	      <artifactId>maven-compiler-plugin</artifactId>
+	      <configuration>
+	        <source>1.5</source>
+	        <target>1.5</target>
+	      </configuration>
+	    </plugin>
+      <plugin>
         <groupId>org.scala-tools</groupId>
         <artifactId>maven-scala-plugin</artifactId>
-        <version>2.14-SNAPSHOT</version>
+        <version>2.15.0</version>
         <executions>
           <execution>
             <goals>
@@ -83,7 +90,7 @@
       <plugin>
         <groupId>org.scala-tools</groupId>
         <artifactId>maven-scala-plugin</artifactId>
-        <version>2.14-SNAPSHOT</version>
+        <version>2.15.0</version>
         <configuration>
           <scalaVersion>${scala.version}</scalaVersion>
         </configuration>
