--- a/trunk/Jetty/.classpath
+++ b/trunk/Jetty/.classpath
@@ -2,28 +2,28 @@
 <classpath>
 	<classpathentry kind="src" path="src"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER"/>
-	<classpathentry kind="lib" path="lib/jetty-ajp-7.0.1.v20091125.jar"/>
-	<classpathentry kind="lib" path="lib/jetty-annotations-7.0.1.v20091125.jar"/>
-	<classpathentry kind="lib" path="lib/jetty-client-7.0.1.v20091125.jar"/>
-	<classpathentry kind="lib" path="lib/jetty-continuation-7.0.1.v20091125.jar"/>
-	<classpathentry kind="lib" path="lib/jetty-deploy-7.0.1.v20091125.jar"/>
-	<classpathentry kind="lib" path="lib/jetty-http-7.0.1.v20091125.jar"/>
-	<classpathentry kind="lib" path="lib/jetty-io-7.0.1.v20091125.jar"/>
-	<classpathentry kind="lib" path="lib/jetty-jmx-7.0.1.v20091125.jar"/>
-	<classpathentry kind="lib" path="lib/jetty-jndi-7.0.1.v20091125.jar"/>
-	<classpathentry kind="lib" path="lib/jetty-plus-7.0.1.v20091125.jar"/>
-	<classpathentry kind="lib" path="lib/jetty-policy-7.0.1.v20091125.jar"/>
-	<classpathentry kind="lib" path="lib/jetty-rewrite-7.0.1.v20091125.jar"/>
-	<classpathentry kind="lib" path="lib/jetty-security-7.0.1.v20091125.jar"/>
-	<classpathentry kind="lib" path="lib/jetty-server-7.0.1.v20091125.jar" sourcepath="C:/Users/ruud/.m2/repository/org/eclipse/jetty/jetty-server/7.0.1.v20091125/jetty-server-7.0.1.v20091125-sources.jar"/>
-	<classpathentry kind="lib" path="lib/jetty-servlet-7.0.1.v20091125.jar" sourcepath="C:/Users/ruud/.m2/repository/org/eclipse/jetty/jetty-servlet/7.0.1.v20091125/jetty-servlet-7.0.1.v20091125-sources.jar"/>
-	<classpathentry kind="lib" path="lib/jetty-servlets-7.0.1.v20091125.jar"/>
-	<classpathentry kind="lib" path="lib/jetty-util-7.0.1.v20091125.jar" sourcepath="C:/Users/ruud/.m2/repository/org/eclipse/jetty/jetty-util/7.0.1.v20091125/jetty-util-7.0.1.v20091125-sources.jar"/>
-	<classpathentry kind="lib" path="lib/jetty-webapp-7.0.1.v20091125.jar" sourcepath="C:/Users/ruud/.m2/repository/org/eclipse/jetty/jetty-webapp/7.0.1.v20091125/jetty-webapp-7.0.1.v20091125-sources.jar"/>
-	<classpathentry kind="lib" path="lib/jetty-websocket-7.0.1.v20091125.jar"/>
-	<classpathentry kind="lib" path="lib/jetty-xml-7.0.1.v20091125.jar"/>
-	<classpathentry kind="lib" path="lib/servlet-api-2.5.jar"/>
-	<classpathentry kind="lib" path="lib/postgresql-8.4-701.jdbc4.jar"/>
+	<classpathentry exported="true" kind="lib" path="lib/jetty-ajp-7.0.1.v20091125.jar"/>
+	<classpathentry exported="true" kind="lib" path="lib/jetty-annotations-7.0.1.v20091125.jar"/>
+	<classpathentry exported="true" kind="lib" path="lib/jetty-client-7.0.1.v20091125.jar"/>
+	<classpathentry exported="true" kind="lib" path="lib/jetty-continuation-7.0.1.v20091125.jar"/>
+	<classpathentry exported="true" kind="lib" path="lib/jetty-deploy-7.0.1.v20091125.jar"/>
+	<classpathentry exported="true" kind="lib" path="lib/jetty-http-7.0.1.v20091125.jar"/>
+	<classpathentry exported="true" kind="lib" path="lib/jetty-io-7.0.1.v20091125.jar"/>
+	<classpathentry exported="true" kind="lib" path="lib/jetty-jmx-7.0.1.v20091125.jar"/>
+	<classpathentry exported="true" kind="lib" path="lib/jetty-jndi-7.0.1.v20091125.jar"/>
+	<classpathentry exported="true" kind="lib" path="lib/jetty-plus-7.0.1.v20091125.jar"/>
+	<classpathentry exported="true" kind="lib" path="lib/jetty-policy-7.0.1.v20091125.jar"/>
+	<classpathentry exported="true" kind="lib" path="lib/jetty-rewrite-7.0.1.v20091125.jar"/>
+	<classpathentry exported="true" kind="lib" path="lib/jetty-security-7.0.1.v20091125.jar"/>
+	<classpathentry exported="true" kind="lib" path="lib/jetty-server-7.0.1.v20091125.jar" sourcepath="C:/Users/ruud/.m2/repository/org/eclipse/jetty/jetty-server/7.0.1.v20091125/jetty-server-7.0.1.v20091125-sources.jar"/>
+	<classpathentry exported="true" kind="lib" path="lib/jetty-servlet-7.0.1.v20091125.jar" sourcepath="C:/Users/ruud/.m2/repository/org/eclipse/jetty/jetty-servlet/7.0.1.v20091125/jetty-servlet-7.0.1.v20091125-sources.jar"/>
+	<classpathentry exported="true" kind="lib" path="lib/jetty-servlets-7.0.1.v20091125.jar"/>
+	<classpathentry exported="true" kind="lib" path="lib/jetty-util-7.0.1.v20091125.jar" sourcepath="C:/Users/ruud/.m2/repository/org/eclipse/jetty/jetty-util/7.0.1.v20091125/jetty-util-7.0.1.v20091125-sources.jar"/>
+	<classpathentry exported="true" kind="lib" path="lib/jetty-webapp-7.0.1.v20091125.jar" sourcepath="C:/Users/ruud/.m2/repository/org/eclipse/jetty/jetty-webapp/7.0.1.v20091125/jetty-webapp-7.0.1.v20091125-sources.jar"/>
+	<classpathentry exported="true" kind="lib" path="lib/jetty-websocket-7.0.1.v20091125.jar"/>
+	<classpathentry exported="true" kind="lib" path="lib/jetty-xml-7.0.1.v20091125.jar"/>
+	<classpathentry exported="true" kind="lib" path="lib/servlet-api-2.5.jar"/>
+	<classpathentry exported="true" kind="lib" path="lib/postgresql-8.4-701.jdbc4.jar"/>
 	<classpathentry kind="con" path="ch.epfl.lamp.sdt.launching.SCALA_CONTAINER"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
