--- a/trunk/TetterodeWebshop/pom.xml
+++ b/trunk/TetterodeWebshop/pom.xml
@@ -39,7 +39,7 @@
       <plugin>
         <groupId>org.scala-tools</groupId>
         <artifactId>maven-scala-plugin</artifactId>
-        <version>2.14-SNAPSHOT</version>
+        <version>2.15.0</version>
         <executions>
           <execution>
             <goals>
@@ -83,7 +83,7 @@
       <plugin>
         <groupId>org.scala-tools</groupId>
         <artifactId>maven-scala-plugin</artifactId>
-        <version>2.14-SNAPSHOT</version>
+        <version>2.15.0</version>
         <configuration>
           <scalaVersion>${scala.version}</scalaVersion>
         </configuration>
