--- a/trunk/ClaroPersistence/pom.xml
+++ b/trunk/ClaroPersistence/pom.xml
@@ -25,6 +25,12 @@
 	</repositories>
 	 
 	<dependencies>
+    <dependency>
+      <groupId>javax.persistence</groupId>
+      <artifactId>persistence-api</artifactId>
+      <version>1.0</version>
+      <scope>provided</scope>
+    </dependency>
 		<dependency>
 	    <groupId>org.eclipse.persistence</groupId>
 	    <artifactId>eclipselink</artifactId>
@@ -34,6 +40,11 @@
 		    <groupId>postgresql</groupId>
 		    <artifactId>postgresql</artifactId>
 		    <version>8.4-701.jdbc4</version>
+		</dependency>
+		<dependency>
+		    <groupId>com.google.guava</groupId>
+		    <artifactId>guava</artifactId>
+		    <version>r05</version>
 		</dependency>
 	</dependencies>
 
