--- a/trunk/ClaroPersistence/pom.xml
+++ b/trunk/ClaroPersistence/pom.xml
@@ -3,13 +3,13 @@
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
 	<modelVersion>4.0.0</modelVersion>
 	<groupId>claro</groupId>
-	<artifactId>persistence</artifactId>
+	<artifactId>catalog-model</artifactId>
 	<version>1.0-SNAPSHOT</version>
 	<name>Claro Persistence</name>
 	<inceptionYear>2010</inceptionYear>
 	<properties>
-		<scala.version>2.8.0.RC3</scala.version>
-		<lift.version>2.0-scala280-SNAPSHOT</lift.version>
+    <maven.compiler.source>1.6</maven.compiler.source>
+    <maven.compiler.target>1.6</maven.compiler.target>
 	</properties>
 
 	<repositories>
@@ -46,28 +46,19 @@
 		    <artifactId>guava</artifactId>
 		    <version>r05</version>
 		</dependency>
+		<dependency>
+			<groupId>easyenterprise</groupId>
+			<artifactId>ee-lib</artifactId>
+			<version>1.0-SNAPSHOT</version>
+			<type>jar</type>
+			<scope>compile</scope>
+		</dependency>
 	</dependencies>
 
 	<build>
 		<sourceDirectory>generated</sourceDirectory>
 		<testSourceDirectory>src/test/scala</testSourceDirectory>
 		<plugins>
-			<plugin>
-				<groupId>org.scala-tools</groupId>
-				<artifactId>maven-scala-plugin</artifactId>
-				<version>2.15.0</version>
-				<executions>
-					<execution>
-						<goals>
-							<goal>compile</goal>
-							<goal>testCompile</goal>
-						</goals>
-					</execution>
-				</executions>
-				<configuration>
-					<scalaVersion>${scala.version}</scalaVersion>
-				</configuration>
-			</plugin>
 			<plugin>
 				<artifactId>maven-compiler-plugin</artifactId>
 				<configuration>
@@ -105,14 +96,6 @@
 	</build>
 	<reporting>
 		<plugins>
-			<plugin>
-				<groupId>org.scala-tools</groupId>
-				<artifactId>maven-scala-plugin</artifactId>
-				<version>2.15-0</version>
-				<configuration>
-					<scalaVersion>${scala.version}</scalaVersion>
-				</configuration>
-			</plugin>
 		</plugins>
 	</reporting>
 </project>
