--- a/trunk/ClaroPersistence/pom.xml
+++ b/trunk/ClaroPersistence/pom.xml
@@ -56,7 +56,6 @@
 	</dependencies>
 
 	<build>
-		<sourceDirectory>generated</sourceDirectory>
 		<testSourceDirectory>src/test/scala</testSourceDirectory>
 		<plugins>
 			<plugin>
@@ -67,31 +66,44 @@
 				<excludes><exclude>claro/persistence/I*Template.java</exclude></excludes>
 				</configuration>
 			</plugin>
-  		<plugin>
-        <artifactId>maven-resources-plugin</artifactId>
-        <version>2.4.3</version>
-        <executions>
-          <execution>
-            <id>copy-resources</id>
-            <phase>validate</phase>
-            <goals>
-              <goal>copy-resources</goal>
-            </goals>
-            <configuration>
-              <outputDirectory>${basedir}/target/classes</outputDirectory>
-              <resources>          
-                <resource>
-                  <directory>generated/</directory>
-                  <includes>
-                    <include>**/*.xml</include>
-                  </includes>
-                  <filtering>true</filtering>
-                </resource>
-              </resources>              
-            </configuration>            
-          </execution>
-        </executions>
-      </plugin>
+	  		<plugin>
+	        <artifactId>maven-resources-plugin</artifactId>
+	        <version>2.4.3</version>
+	        <executions>
+	          <execution>
+	            <id>copy-resources</id>
+	            <phase>validate</phase>
+	            <goals>
+	              <goal>copy-resources</goal>
+	            </goals>
+	            <configuration>
+	              <outputDirectory>${basedir}/target/classes</outputDirectory>
+	              <resources>          
+	                <resource>
+	                  <directory>generated/</directory>
+	                  <includes>
+	                    <include>**/*.xml</include>
+	                  </includes>
+	                  <filtering>true</filtering>
+	                </resource>
+	              </resources>              
+	            </configuration>            
+	          </execution>
+	        </executions>
+	      </plugin>
+	      <plugin>
+                <groupId>org.codehaus.mojo</groupId>
+				<artifactId>build-helper-maven-plugin</artifactId>
+				<executions>
+				<execution>
+				<phase>generate-sources</phase>
+				<goals><goal>add-source</goal></goals>
+				<configuration>
+				<sources><source>source</source><source>generated</source></sources>
+				</configuration>
+				</execution>
+				</executions>
+			</plugin>
  		</plugins>
 	</build>
 	<reporting>
