--- a/trunk/catalog-model/pom.xml
+++ b/trunk/catalog-model/pom.xml
@@ -1,4 +1,3 @@
-
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
 	<modelVersion>4.0.0</modelVersion>
@@ -44,7 +43,7 @@
 		<dependency>
 		    <groupId>com.google.guava</groupId>
 		    <artifactId>guava</artifactId>
-		    <version>r05</version>
+		    <version>r07</version>
 		</dependency>
 		<dependency>
 			<groupId>easyenterprise</groupId>
@@ -53,8 +52,13 @@
 			<type>jar</type>
 			<scope>compile</scope>
 		</dependency>
+	    <dependency>
+	      <groupId>javax.servlet</groupId>
+	      <artifactId>servlet-api</artifactId>
+	      <version>2.4</version>
+	      <scope>provided</scope>
+	    </dependency>
 	</dependencies>
-
 	<build>
 		<testSourceDirectory>src/test/scala</testSourceDirectory>
 		<plugins>
@@ -92,19 +96,25 @@
 	        </executions>
 	      </plugin>
 	      <plugin>
-                <groupId>org.codehaus.mojo</groupId>
+	            <groupId>org.codehaus.mojo</groupId>
 				<artifactId>build-helper-maven-plugin</artifactId>
 				<executions>
 				<execution>
 				<phase>generate-sources</phase>
 				<goals><goal>add-source</goal></goals>
 				<configuration>
-				<sources><source>source</source><source>generated</source></sources>
+				<sources><source>source</source>
+				<source>generated</source></sources>
 				</configuration>
 				</execution>
 				</executions>
 			</plugin>
  		</plugins>
+ 		<resources>      
+			<resource>
+			     <directory>resources</directory>
+			</resource>
+ 		</resources>
 	</build>
 	<reporting>
 		<plugins>
