git-svn-id: file:///var/svn/claro-catalog@471 0db79848-0afd-4259-9b79-6da5ec97fbb6

--- a/trunk/catalog-manager/war/WEB-INF/web.xml
+++ b/trunk/catalog-manager/war/WEB-INF/web.xml
@@ -8,13 +8,13 @@
   <servlet>
     <servlet-name>CatalogServlet</servlet-name>
     <servlet-class>claro.catalog.manager.server.CatalogManagerServlet</servlet-class>
-        <init-param>
+      <init-param>
         <param-name>javax.persistence.jdbc.driver</param-name>
         <param-value>org.postgresql.Driver</param-value>
       </init-param>
       <init-param>
         <param-name>javax.persistence.jdbc.url</param-name>
-        <param-value>jdbc:postgresql:postgres/catalog</param-value>
+        <param-value>jdbc:postgresql:catalog</param-value>
       </init-param>
       <init-param>
         <param-name>javax.persistence.jdbc.user</param-name>
