--- a/trunk/catalog-model/pom.xml
+++ b/trunk/catalog-model/pom.xml
@@ -24,16 +24,16 @@
 	</repositories>
 	 
 	<dependencies>
-    <dependency>
-      <groupId>javax.persistence</groupId>
-      <artifactId>persistence-api</artifactId>
-      <version>1.0</version>
-      <scope>provided</scope>
-    </dependency>
+<!--    <dependency>-->
+<!--      <groupId>javax.persistence</groupId>-->
+<!--      <artifactId>persistence-api</artifactId>-->
+<!--      <version>1.0</version>-->
+<!--      <scope>provided</scope>-->
+<!--    </dependency>-->
 		<dependency>
 	    <groupId>org.eclipse.persistence</groupId>
 	    <artifactId>eclipselink</artifactId>
-	    <version>2.0.2</version>
+	    <version>2.1.1</version>
 	  </dependency>
 		<dependency>
 		    <groupId>postgresql</groupId>
