--- a/trunk/catalog-model/pom.xml
+++ b/trunk/catalog-model/pom.xml
@@ -52,15 +52,27 @@
 			<type>jar</type>
 			<scope>compile</scope>
 		</dependency>
+    <dependency>
+      <groupId>javax.servlet</groupId>
+      <artifactId>servlet-api</artifactId>
+      <version>2.4</version>
+      <scope>provided</scope>
+    </dependency>
+    <dependency>
+	    <groupId>org.apache.derby</groupId>
+	    <artifactId>derby</artifactId>
+	    <version>10.6.2.1</version>
+	    <scope>test</scope>
+		</dependency>
 	    <dependency>
-	      <groupId>javax.servlet</groupId>
-	      <artifactId>servlet-api</artifactId>
-	      <version>2.4</version>
-	      <scope>provided</scope>
-	    </dependency>
+		    <groupId>org.hsqldb</groupId>
+		    <artifactId>hsqldb</artifactId>
+		    <version>2.0.0</version>
+		    <scope>test</scope>
+			</dependency>
 	</dependencies>
 	<build>
-		<testSourceDirectory>src/test/scala</testSourceDirectory>
+		<testSourceDirectory>test</testSourceDirectory>
 		<plugins>
 			<plugin>
 				<artifactId>maven-compiler-plugin</artifactId>
