--- a/trunk/catalog-model/pom.xml
+++ b/trunk/catalog-model/pom.xml
@@ -22,7 +22,12 @@
 		  <url>http://scala-tools.org/repo-releases</url>
 		</repository>
 	</repositories>
-	 
+	<pluginRepositories>
+    <pluginRepository>
+      <id>maven-annotation-plugin</id>
+      <url>http://maven-annotation-plugin.googlecode.com/svn/trunk/mavenrepo</url>
+    </pluginRepository>
+	</pluginRepositories>
 	<dependencies>
 <!--    <dependency>-->
 <!--      <groupId>javax.persistence</groupId>-->
@@ -121,6 +126,30 @@
 				</execution>
 				</executions>
 			</plugin>
+		<plugin>
+	        <groupId>org.bsc.maven</groupId>
+	        <artifactId>maven-processor-plugin</artifactId>
+	        <version>1.3.5</version>
+	        <configuration>
+	        	<sourceDirectory>generated</sourceDirectory>
+	        	<outputDirectory>generated</outputDirectory>
+	        </configuration>
+	        <executions>
+	          <execution>
+	            <id>process</id>
+	            <goals>
+	              <goal>process</goal>
+	            </goals>
+	            <phase>generate-sources</phase>
+	            <configuration>
+	              <compilerArguments>-Aeclipselink.persistencexml=resources/META-INF/persistence.xml</compilerArguments>
+	              <processors>
+	                <processor>org.eclipse.persistence.internal.jpa.modelgen.CanonicalModelProcessor</processor>
+	              </processors>
+	            </configuration>
+	          </execution>
+	        </executions>
+	      </plugin>
  		</plugins>
  		<resources>      
 			<resource>
