--- a/trunk/catalog-manager/pom.xml
+++ b/trunk/catalog-manager/pom.xml
@@ -22,7 +22,7 @@
     </dependency>
 	<dependency>
 		<groupId>claro</groupId>
-		<artifactId>catalog-model</artifactId>
+		<artifactId>catalog-server</artifactId>
 		<version>1.0-SNAPSHOT</version>
 		<type>jar</type>
 		<scope>compile</scope>
