git-svn-id: file:///var/svn/claro-catalog@563 0db79848-0afd-4259-9b79-6da5ec97fbb6

--- a/trunk/catalog-manager/war/WEB-INF/web.xml
+++ b/trunk/catalog-manager/war/WEB-INF/web.xml
@@ -36,12 +36,12 @@
 			Put the number of milliseconds to sleep in each block received in the server. 
 			false or 0, means don't use slow uploads -->
 		<param-name>slowUploads</param-name>
-		<param-value>200</param-value>
+		<param-value>0</param-value>
 	</context-param>
 	<servlet>
 		<servlet-name>uploadServlet</servlet-name>
 		<!-- This is the default servlet, it puts files in session -->
-		<servlet-class>gwtupload.server.UploadServlet</servlet-class>
+		<servlet-class>easyenterprise.lib.gwt.server.UploadServlet</servlet-class>
 	</servlet>
 	<servlet-mapping>
 		<servlet-name>uploadServlet</servlet-name>
