--- a/trunk/catalog-manager/pom.xml
+++ b/trunk/catalog-manager/pom.xml
@@ -20,6 +20,7 @@
       <scope>provided</scope>
       <version>2.1.1</version>
     </dependency>
+    
 	<dependency>
 		<groupId>claro</groupId>
 		<artifactId>catalog-server</artifactId>
@@ -27,7 +28,21 @@
 		<type>jar</type>
 		<scope>compile</scope>
 	</dependency>
+ 
+  <dependency>
+    <groupId>org.cobogw.gwt</groupId>
+    <artifactId>cobogw</artifactId>
+    <version>1.3.1</version>
+  </dependency>
   </dependencies>
+  
+  <repositories>
+   <repository>
+    <id>cobogw</id>
+    <name>Cobogw repository at googlecode</name>
+    <url>http://cobogw.googlecode.com/svn/maven2</url>
+  </repository>
+  </repositories>
 
   <build>
     <outputDirectory>war/WEB-INF/classes</outputDirectory>
