git-svn-id: file:///var/svn/claro-catalog@572 0db79848-0afd-4259-9b79-6da5ec97fbb6

--- a/trunk/ClaroCMS/pom.xml
+++ b/trunk/ClaroCMS/pom.xml
@@ -90,7 +90,7 @@
     </dependency>
      <dependency>
       <groupId>claro</groupId>
-      <artifactId>persistence</artifactId>
+      <artifactId>catalog-server</artifactId>
       <version>1.0-SNAPSHOT</version>
     </dependency>
   </dependencies>
@@ -112,6 +112,7 @@
         </executions>
         <configuration>
           <scalaVersion>${scala.version}</scalaVersion>
+          <jvmArgs><jvmArg>-Xmx700m</jvmArg></jvmArgs>
         </configuration>
       </plugin>
       <plugin>
