--- a/trunk/catalog-manager/pom.xml
+++ b/trunk/catalog-manager/pom.xml
@@ -18,12 +18,19 @@
       <groupId>com.google.gwt</groupId>
       <artifactId>gwt-user</artifactId>
       <scope>provided</scope>
-      <version>2.1.1</version>
+      <version>2.1.0</version>
     </dependency>
     
 	<dependency>
 		<groupId>claro</groupId>
 		<artifactId>catalog-server</artifactId>
+		<version>1.0-SNAPSHOT</version>
+		<type>jar</type>
+		<scope>compile</scope>
+	</dependency>
+	<dependency>
+		<groupId>easyenterprise</groupId>
+		<artifactId>ee-lib</artifactId>
 		<version>1.0-SNAPSHOT</version>
 		<type>jar</type>
 		<scope>compile</scope>
@@ -59,8 +66,17 @@
           </execution>
         </executions>
         <configuration>
-          <runTarget>claro.catalog.manager.CatalogManager/CatalogManager.html</runTarget>
-        </configuration>
+			<runTarget>claro.catalog.manager.CatalogManager/CatalogManager.html</runTarget>
+			<logLevel>INFO</logLevel>
+			<style>DETAILED</style>
+			<noServer>false</noServer>
+			<extraJvmArgs>-Xmx512m</extraJvmArgs>
+			<gwtVersion>2.1.1</gwtVersion>
+ 		  <compileSourcesArtifacts>
+            <artifact>claro:catalog-server</artifact>
+            <artifact>easyenterprise:ee-lib</artifact>
+           </compileSourcesArtifacts>
+		</configuration>
       </plugin>
       <plugin>
         <groupId>org.apache.maven.plugins</groupId>
@@ -70,7 +86,7 @@
           <warSourceDirectory>war</warSourceDirectory>
           <webXml>war/WEB-INF/web.xml</webXml>
           <outputDirectory>war</outputDirectory>
-        </configuration>
+		</configuration>
       </plugin>
     </plugins>
   </build>
