git-svn-id: file:///var/svn/claro-catalog@648 0db79848-0afd-4259-9b79-6da5ec97fbb6

--- a/trunk/ClaroCMS/pom.xml
+++ b/trunk/ClaroCMS/pom.xml
@@ -172,7 +172,7 @@
         <executions>
           <execution>
             <id>copy-dependencies</id>
-            <phase>install</phase>
+            <phase>generate-sources</phase>
             <goals>
               <goal>copy-dependencies</goal>
             </goals>
